// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.test.js it renders 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #8F9C98;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #8F9C98;
  box-shadow: 0 0 0 1px #8F9C98;
}

.c0::-webkit-input-placeholder {
  color: #5F7071;
}

.c0::-moz-placeholder {
  color: #5F7071;
}

.c0:-ms-input-placeholder {
  color: #5F7071;
}

.c0::placeholder {
  color: #5F7071;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #178afe;
  box-shadow: 0 0 0 2px #178afe;
}

<input
  className="c0"
  id="fake-test-id"
/>
`;

exports[`Input.test.js it renders an input element with a really large padding and margin 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #8F9C98;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #8F9C98;
  box-shadow: 0 0 0 1px #8F9C98;
  margin: 32px;
  padding: 32px;
}

.c0::-webkit-input-placeholder {
  color: #5F7071;
}

.c0::-moz-placeholder {
  color: #5F7071;
}

.c0:-ms-input-placeholder {
  color: #5F7071;
}

.c0::placeholder {
  color: #5F7071;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #178afe;
  box-shadow: 0 0 0 2px #178afe;
}

<input
  className="c0"
  id="fake-test-id"
/>
`;

exports[`Input.test.js it renders an input element with a red border with a color prop is passed 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #8F9C98;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #fe1717;
  box-shadow: 0 0 0 1px #fe1717;
}

.c0::-webkit-input-placeholder {
  color: #5F7071;
}

.c0::-moz-placeholder {
  color: #5F7071;
}

.c0:-ms-input-placeholder {
  color: #5F7071;
}

.c0::placeholder {
  color: #5F7071;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #fe1717;
  box-shadow: 0 0 0 2px #fe1717;
}

<input
  className="c0"
  color="red"
  id="fake-test-id"
/>
`;

exports[`Input.test.js it renders an input element with large text 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #8F9C98;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #8F9C98;
  box-shadow: 0 0 0 1px #8F9C98;
}

.c0::-webkit-input-placeholder {
  color: #5F7071;
}

.c0::-moz-placeholder {
  color: #5F7071;
}

.c0:-ms-input-placeholder {
  color: #5F7071;
}

.c0::placeholder {
  color: #5F7071;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #178afe;
  box-shadow: 0 0 0 2px #178afe;
}

<input
  className="c0"
  fontSize={4}
  id="fake-test-id"
/>
`;
